Fix abbreviation alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,6 +96,7 @@ ul.product__features li:not(:last-child):after {
   display: inline-block;
   font-weight: bold;
   vertical-align: middle;
+  line-height: 40px;
   text-align: center;
 }
 
